// Slice 1 — walking skeleton สร้างเฉพาะ 4 ตารางที่เส้นทางบางที่สุดต้องใช้
// ตารางที่เหลืออีก 24 ตาราง (docs/database.md) จะถูกเพิ่มเมื่อถึง slice ที่ใช้จริง
// ตามหลัก "สร้างตารางเมื่อถึงเวลาใช้ ไม่สร้างล่วงหน้าทั้งหมด" (implementation-plan.md §7)

generator client {
  provider = "prisma-client"
  output   = "../apps/api/src/generated/prisma"
}

// Prisma 7 ถอด url/directUrl/shadowDatabaseUrl ออกจาก schema แล้ว
// connection string ย้ายไปอยู่ใน prisma.config.ts และฝั่ง client ต้องใช้ driver adapter
datasource db {
  provider = "postgresql"
}

enum UserRole {
  user
  shop
  admin

  @@map("user_role")
}

enum ProjectStatus {
  draft
  published
  archived

  @@map("project_status")
}

enum PaletteHarmony {
  analogous
  complementary
  triadic
  monochrome

  @@map("palette_harmony")
}

enum PaletteSource {
  curated
  extracted

  @@map("palette_source")
}

enum TemplateOrigin {
  original
  ai
  remix

  @@map("template_origin")
}

enum TemplateVisibility {
  public
  unlisted
  hidden

  @@map("template_visibility")
}

enum TemplateShareChannel {
  link
  facebook
  line
  instagram
  copy

  @@map("template_share_channel")
}

enum ContentReportTarget {
  template
  comment
  message

  @@map("content_report_target")
}

enum ContentReportReason {
  spam
  inappropriate
  copyright
  harassment
  other

  @@map("content_report_reason")
}

enum ContentReportStatus {
  pending
  reviewed
  dismissed

  @@map("content_report_status")
}

enum NotificationKind {
  post_like
  post_comment
  template_remix
  appointment_status
  appointment_message
  direct_message

  @@map("notification_kind")
}

enum AppointmentStatus {
  pending
  counter_offered
  confirmed
  declined
  cancelled
  completed
  no_show

  @@map("appointment_status")
}

enum ProposalActor {
  customer
  shop

  @@map("proposal_actor")
}

enum ProposalStatus {
  pending
  accepted
  rejected
  superseded

  @@map("proposal_status")
}

model User {
  id           String   @id @default(uuid()) @db.Uuid
  email        String   @unique
  passwordHash String   @map("password_hash")
  role         UserRole @default(user)
  displayName  String   @map("display_name")
  dateOfBirth  DateTime? @map("date_of_birth") @db.Date
  termsAcceptedAt DateTime? @map("terms_accepted_at") @db.Timestamptz
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz
  updatedAt    DateTime @updatedAt @map("updated_at") @db.Timestamptz

  sessions                Session[]
  projects                Project[]
  assets                  Asset[]
  templates               NailTemplate[]
  templateLikes           TemplateLike[]
  templateShares          TemplateShare[]
  templateRemixes         TemplateRemix[]
  templateComments        TemplateComment[]
  contentReports          ContentReport[]
  notifications           Notification[]
  shopProfile             ShopProfile?
  customerAppointments     Appointment[]         @relation("AppointmentCustomer")
  authoredReviews           ShopReview[]          @relation("ReviewAuthor")
  conversationsAsA         Conversation[]        @relation("ConversationA")
  conversationsAsB         Conversation[]        @relation("ConversationB")
  createdConversations     Conversation[]        @relation("ConversationCreator")
  sentConversationMessages ConversationMessage[] @relation("ConversationMessageSender")
  blocksCreated            UserBlock[]            @relation("BlockAuthor")
  blocksReceived           UserBlock[]            @relation("BlockTarget")

  @@map("users")
}

model Session {
  id         String   @id @default(uuid()) @db.Uuid
  userId     String   @map("user_id") @db.Uuid
  // เก็บ SHA-256 ของ token ไม่ใช่ token ดิบ — ฐานข้อมูลรั่วก็ปลอม cookie ไม่ได้
  tokenHash  Bytes    @unique @map("token_hash")
  expiresAt  DateTime @map("expires_at") @db.Timestamptz
  lastSeenAt DateTime @default(now()) @map("last_seen_at") @db.Timestamptz
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz
  userAgent  String?  @map("user_agent")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expiresAt])
  @@map("sessions")
}

model Project {
  id               String        @id @default(uuid()) @db.Uuid
  userId           String        @map("user_id") @db.Uuid
  name             String
  status           ProjectStatus @default(draft)
  versionCount     Int           @default(0) @map("version_count")
  createdAt        DateTime      @default(now()) @map("created_at") @db.Timestamptz
  updatedAt        DateTime      @updatedAt @map("updated_at") @db.Timestamptz
  deletedAt        DateTime?     @map("deleted_at") @db.Timestamptz
  thumbnailAssetId String?       @map("thumbnail_asset_id") @db.Uuid

  // งานที่ยังไม่ได้กดบันทึกเป็นเวอร์ชัน — ปลายทางของ autosave (Slice 2)
  //
  // ทำไมไม่ให้ autosave สร้างเวอร์ชันใหม่ทุก 3 วินาที: เวอร์ชันคือสิ่งที่ผู้ใช้ตั้งใจ
  // บันทึกและย้อนกลับมาดูได้ ถ้าปล่อยให้ autosave สร้าง รายการเวอร์ชันจะมีหลายร้อยแถว
  // ต่อการนั่งวาดหนึ่งชั่วโมงจนหาเวอร์ชันที่ต้องการไม่เจอ และตารางโตเร็วโดยไม่จำเป็น
  //
  // ทำไมไม่เขียนทับเวอร์ชันล่าสุดแทน: เวอร์ชันต้องเปลี่ยนแปลงไม่ได้ ไม่งั้นการย้อนกลับ
  // ไปเวอร์ชันเก่าจะได้ของที่ไม่ตรงกับตอนที่บันทึกไว้
  draftDocument    Json?     @map("draft_document") @db.JsonB
  draftUpdatedAt   DateTime? @map("draft_updated_at") @db.Timestamptz
  // เวอร์ชันที่ draft นี้ถูกแก้ต่อยอดมา — ใช้ตรวจว่า draft ล้าสมัยไปแล้วหรือยัง
  draftBaseVersion Int?      @map("draft_base_version")

  user            User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  versions        DesignVersion[]
  thumbnailAsset  Asset?          @relation("ProjectThumbnail", fields: [thumbnailAssetId], references: [id], onDelete: SetNull)
  templateRemixes TemplateRemix[]

  // ดัชนีหลักของหน้ารายการงาน — รองรับทั้งการกรองเจ้าของ เรียงล่าสุด และ keyset pagination (A-14)
  // เป็น partial index จึงไม่เก็บแถวที่ถูกลบ ทำให้ดัชนีเล็กลงและไม่ต้องกรองซ้ำ
  @@index([userId, updatedAt(sort: Desc), id(sort: Desc)])
  @@map("projects")
}

model Asset {
  id             String   @id @default(uuid()) @db.Uuid
  ownerId        String?  @map("owner_id") @db.Uuid
  kind           String   @db.Text
  storageKey     String   @unique @map("storage_key") @db.Text
  mimeType       String   @map("mime_type") @db.Text
  sizeBytes      BigInt   @map("size_bytes")
  checksumSha256 Bytes    @map("checksum_sha256")
  metadata       Json     @default("{}") @db.JsonB
  createdAt      DateTime @default(now()) @map("created_at") @db.Timestamptz

  owner              User?          @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  projects           Project[]      @relation("ProjectThumbnail")
  templateThumbnails NailTemplate[] @relation("TemplateThumbnail")

  @@index([ownerId, kind, createdAt(sort: Desc)])
  @@index([checksumSha256])
  @@map("assets")
}

model DesignVersion {
  id            String   @id @default(uuid()) @db.Uuid
  projectId     String   @map("project_id") @db.Uuid
  versionNumber Int      @map("version_number")
  schemaVersion Int      @default(2) @map("schema_version")
  document      Json     @db.JsonB
  label         String?
  createdAt     DateTime @default(now()) @map("created_at") @db.Timestamptz

  project      Project        @relation(fields: [projectId], references: [id], onDelete: Cascade)
  templates    NailTemplate[]
  appointments Appointment[]

  // บังคับไม่ให้เลขเวอร์ชันซ้ำ — เป็นรากฐานของ optimistic concurrency
  @@unique([projectId, versionNumber])
  @@map("design_versions")
}

model BrandColor {
  id          String  @id @default(uuid()) @db.Uuid
  brand       String  @db.Text
  name        String  @db.Text
  hex         String  @db.VarChar(7)
  isAvailable Boolean @default(true) @map("is_available")

  @@unique([brand, hex])
  @@index([brand, isAvailable])
  @@map("brand_colors")
}

model ColorPalette {
  id         String         @id @default(uuid()) @db.Uuid
  code       String         @unique @db.Text
  nameTh     String         @map("name_th") @db.Text
  colors     Json           @db.JsonB
  harmony    PaletteHarmony
  source     PaletteSource  @default(curated)
  popularity Int            @default(0)
  isActive   Boolean        @default(true) @map("is_active")

  @@index([isActive, popularity(sort: Desc)])
  @@map("color_palettes")
}

model DesignArchetype {
  id             String   @id @default(uuid()) @db.Uuid
  code           String   @unique @db.Text
  nameTh         String   @map("name_th") @db.Text
  composerKey    String   @map("composer_key") @db.Text
  defaultParams  Json     @default("{}") @map("default_params") @db.JsonB
  supportedZones String[] @map("supported_zones")
  popularity     Int      @default(0)
  isActive       Boolean  @default(true) @map("is_active")

  @@index([isActive, popularity(sort: Desc)])
  @@map("design_archetypes")
}

model NailTemplate {
  id               String             @id @default(uuid()) @db.Uuid
  authorId         String             @map("author_id") @db.Uuid
  designVersionId  String             @map("design_version_id") @db.Uuid
  name             String             @db.Text
  caption          String?            @db.Text
  category         String?            @db.Text
  primaryColor     String?            @map("primary_color") @db.Text
  origin           TemplateOrigin     @default(original)
  sourceTemplateId String?            @map("source_template_id") @db.Uuid
  thumbnailAssetId String?            @map("thumbnail_asset_id") @db.Uuid
  visibility       TemplateVisibility @default(public)
  likeCount        Int                @default(0) @map("like_count")
  shareCount       Int                @default(0) @map("share_count")
  remixCount       Int                @default(0) @map("remix_count")
  viewCount        Int                @default(0) @map("view_count")
  commentCount     Int                @default(0) @map("comment_count")
  reportCount      Int                @default(0) @map("report_count")
  recipe           Json?              @db.JsonB
  createdAt        DateTime           @default(now()) @map("created_at") @db.Timestamptz
  updatedAt        DateTime           @updatedAt @map("updated_at") @db.Timestamptz
  deletedAt        DateTime?          @map("deleted_at") @db.Timestamptz

  author         User              @relation(fields: [authorId], references: [id], onDelete: Cascade)
  designVersion  DesignVersion     @relation(fields: [designVersionId], references: [id], onDelete: Restrict)
  sourceTemplate NailTemplate?     @relation("TemplateRemixSource", fields: [sourceTemplateId], references: [id], onDelete: SetNull)
  remixes        NailTemplate[]    @relation("TemplateRemixSource")
  thumbnailAsset Asset?            @relation("TemplateThumbnail", fields: [thumbnailAssetId], references: [id], onDelete: SetNull)
  likes          TemplateLike[]
  shares         TemplateShare[]
  remixEvents    TemplateRemix[]
  comments       TemplateComment[]

  @@index([authorId, createdAt(sort: Desc)])
  @@index([sourceTemplateId])
  @@map("nail_templates")
}

model TemplateLike {
  templateId String   @map("template_id") @db.Uuid
  userId     String   @map("user_id") @db.Uuid
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz

  template NailTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)
  user     User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([templateId, userId])
  @@index([userId, createdAt(sort: Desc)])
  @@map("template_likes")
}

model TemplateShare {
  id         String               @id @default(uuid()) @db.Uuid
  templateId String               @map("template_id") @db.Uuid
  userId     String?              @map("user_id") @db.Uuid
  channel    TemplateShareChannel
  createdAt  DateTime             @default(now()) @map("created_at") @db.Timestamptz

  template NailTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)
  user     User?        @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([templateId, createdAt(sort: Desc)])
  @@index([userId, createdAt(sort: Desc)])
  @@map("template_shares")
}

model TemplateRemix {
  id         String   @id @default(uuid()) @db.Uuid
  templateId String   @map("template_id") @db.Uuid
  userId     String   @map("user_id") @db.Uuid
  projectId  String   @map("project_id") @db.Uuid
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz

  template NailTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)
  user     User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  project  Project      @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@unique([templateId, projectId])
  @@index([userId, createdAt(sort: Desc)])
  @@map("template_remixes")
}

model TemplateComment {
  id         String    @id @default(uuid()) @db.Uuid
  templateId String    @map("template_id") @db.Uuid
  userId     String    @map("user_id") @db.Uuid
  content    String    @db.Text
  createdAt  DateTime  @default(now()) @map("created_at") @db.Timestamptz
  deletedAt  DateTime? @map("deleted_at") @db.Timestamptz

  template NailTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)
  user     User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([templateId, createdAt(sort: Desc)])
  @@map("template_comments")
}

model ContentReport {
  id         String              @id @default(uuid()) @db.Uuid
  targetType ContentReportTarget @map("target_type")
  targetId   String              @map("target_id") @db.Uuid
  reporterId String              @map("reporter_id") @db.Uuid
  reason     ContentReportReason
  detail     String?             @db.Text
  status     ContentReportStatus @default(pending)
  createdAt  DateTime            @default(now()) @map("created_at") @db.Timestamptz

  reporter User @relation(fields: [reporterId], references: [id], onDelete: Cascade)

  @@unique([targetType, targetId, reporterId])
  @@index([status, createdAt(sort: Desc)])
  @@map("content_reports")
}

model Notification {
  id         String           @id @default(uuid()) @db.Uuid
  userId     String           @map("user_id") @db.Uuid
  kind       NotificationKind
  title      String           @db.Text
  sourceType String           @map("source_type") @db.Text
  sourceId   String           @map("source_id") @db.Uuid
  isRead     Boolean          @default(false) @map("is_read")
  createdAt  DateTime         @default(now()) @map("created_at") @db.Timestamptz

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, createdAt(sort: Desc)])
  @@map("notifications")
}

model ShopProfile {
  userId       String   @id @map("user_id") @db.Uuid
  shopName     String   @map("shop_name") @db.Text
  description  String?  @db.Text
  locationText String?  @map("location_text") @db.Text
  phoneNumbers String[] @default([]) @map("phone_numbers")
  openingHours Json?    @map("opening_hours") @db.JsonB
  isVerified   Boolean  @default(false) @map("is_verified")
  ratingAvg    Decimal  @default(0) @map("rating_avg") @db.Decimal(3, 2)
  ratingCount  Int      @default(0) @map("rating_count")

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  services     ShopService[]
  appointments Appointment[] @relation("AppointmentShop")
  reviews      ShopReview[]  @relation("ReviewShop")

  @@index([isVerified, ratingAvg(sort: Desc), ratingCount(sort: Desc)], map: "shop_profiles_recommendation_idx")
  @@map("shop_profiles")
}

model ShopService {
  id              String  @id @default(uuid()) @db.Uuid
  shopId          String  @map("shop_id") @db.Uuid
  name            String  @db.Text
  description     String? @db.Text
  priceThb        Decimal @map("price_thb") @db.Decimal(10, 2)
  durationMinutes Int     @map("duration_minutes")
  isActive        Boolean @default(true) @map("is_active")
  sortOrder       Int     @default(0) @map("sort_order")

  shop         ShopProfile   @relation(fields: [shopId], references: [userId], onDelete: Cascade)
  appointments Appointment[]

  @@index([shopId, sortOrder], map: "shop_services_active_idx")
  @@map("shop_services")
}

model Appointment {
  id              String            @id @default(uuid()) @db.Uuid
  customerId      String            @map("customer_id") @db.Uuid
  shopId          String            @map("shop_id") @db.Uuid
  serviceId       String?           @map("service_id") @db.Uuid
  designVersionId String?           @map("design_version_id") @db.Uuid
  status          AppointmentStatus @default(pending)
  agreedStartAt   DateTime?         @map("agreed_start_at") @db.Timestamptz
  durationMinutes Int               @map("duration_minutes")
  priceQuotedThb  Decimal?          @map("price_quoted_thb") @db.Decimal(10, 2)
  customerNote    String?           @map("customer_note") @db.Text
  shopNote        String?           @map("shop_note") @db.Text
  createdAt       DateTime          @default(now()) @map("created_at") @db.Timestamptz
  updatedAt       DateTime          @updatedAt @map("updated_at") @db.Timestamptz

  customer      User                  @relation("AppointmentCustomer", fields: [customerId], references: [id], onDelete: Cascade)
  shop          ShopProfile           @relation("AppointmentShop", fields: [shopId], references: [userId], onDelete: Cascade)
  service       ShopService?          @relation(fields: [serviceId], references: [id], onDelete: SetNull)
  designVersion DesignVersion?        @relation(fields: [designVersionId], references: [id], onDelete: SetNull)
  proposals     AppointmentProposal[]
  review        ShopReview?

  @@index([customerId, createdAt(sort: Desc)], map: "appointments_customer_created_idx")
  @@index([shopId, status, createdAt(sort: Desc)], map: "appointments_shop_status_created_idx")
  @@map("appointments")
}

model AppointmentProposal {
  id              String         @id @default(uuid()) @db.Uuid
  appointmentId   String         @map("appointment_id") @db.Uuid
  proposedBy      ProposalActor  @map("proposed_by")
  proposedStartAt DateTime       @map("proposed_start_at") @db.Timestamptz
  durationMinutes Int            @map("duration_minutes")
  message         String?        @db.Text
  status          ProposalStatus @default(pending)
  createdAt       DateTime       @default(now()) @map("created_at") @db.Timestamptz

  appointment Appointment @relation(fields: [appointmentId], references: [id], onDelete: Cascade)

  @@index([appointmentId, createdAt(sort: Desc)], map: "appointment_proposals_timeline_idx")
  @@map("appointment_proposals")
}

model ShopReview {
  id            String    @id @default(uuid()) @db.Uuid
  appointmentId String    @unique(map: "shop_reviews_appointment_key") @map("appointment_id") @db.Uuid
  shopId        String    @map("shop_id") @db.Uuid
  authorId      String    @map("author_id") @db.Uuid
  rating        Int       @db.SmallInt
  comment       String?   @db.Text
  shopReply     String?   @map("shop_reply") @db.Text
  createdAt     DateTime  @default(now()) @map("created_at") @db.Timestamptz
  deletedAt     DateTime? @map("deleted_at") @db.Timestamptz

  appointment Appointment @relation(fields: [appointmentId], references: [id], onDelete: Cascade)
  shop        ShopProfile @relation("ReviewShop", fields: [shopId], references: [userId], onDelete: Cascade)
  author      User        @relation("ReviewAuthor", fields: [authorId], references: [id], onDelete: Cascade)

  @@index([shopId, createdAt(sort: Desc)], map: "shop_reviews_shop_created_idx")
  @@map("shop_reviews")
}

model Conversation {
  id             String   @id @default(uuid()) @db.Uuid
  participantAId String   @map("participant_a_id") @db.Uuid
  participantBId String   @map("participant_b_id") @db.Uuid
  createdById    String   @map("created_by_id") @db.Uuid
  lastMessageAt  DateTime @default(now()) @map("last_message_at") @db.Timestamptz
  createdAt      DateTime @default(now()) @map("created_at") @db.Timestamptz

  participantA User                  @relation("ConversationA", fields: [participantAId], references: [id], onDelete: Cascade)
  participantB User                  @relation("ConversationB", fields: [participantBId], references: [id], onDelete: Cascade)
  createdBy    User                  @relation("ConversationCreator", fields: [createdById], references: [id], onDelete: Cascade)
  messages     ConversationMessage[]

  @@unique([participantAId, participantBId], map: "conversations_pair_key")
  @@index([participantAId, lastMessageAt(sort: Desc)], map: "conversations_a_recent_idx")
  @@index([participantBId, lastMessageAt(sort: Desc)], map: "conversations_b_recent_idx")
  @@map("conversations")
}

model ConversationMessage {
  id             String    @id @default(uuid()) @db.Uuid
  conversationId String    @map("conversation_id") @db.Uuid
  senderId       String?   @map("sender_id") @db.Uuid
  content        String    @db.Text
  readAt         DateTime? @map("read_at") @db.Timestamptz
  createdAt      DateTime  @default(now()) @map("created_at") @db.Timestamptz

  conversation Conversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  sender       User?        @relation("ConversationMessageSender", fields: [senderId], references: [id], onDelete: SetNull)

  @@index([conversationId, createdAt(sort: Desc), id(sort: Desc)], map: "conversation_messages_thread_idx")
  @@index([conversationId, readAt], map: "conversation_messages_unread_idx")
  @@map("conversation_messages")
}

model UserBlock {
  blockerId String   @map("blocker_id") @db.Uuid
  blockedId String   @map("blocked_id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  blocker User @relation("BlockAuthor", fields: [blockerId], references: [id], onDelete: Cascade)
  blocked User @relation("BlockTarget", fields: [blockedId], references: [id], onDelete: Cascade)

  @@id([blockerId, blockedId])
  @@index([blockedId], map: "user_blocks_target_idx")
  @@map("user_blocks")
}


model KnowledgeEntry {
  id         String   @id @default(uuid()) @db.Uuid
  question   String   @db.Text
  answer     String   @db.Text
  sourceType String?  @map("source_type") @db.Text
  sourceId   String?  @map("source_id") @db.Uuid
  isActive   Boolean  @default(true) @map("is_active")
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz

  @@index([isActive, createdAt(sort: Desc)], map: "knowledge_entries_active_idx")
  @@map("knowledge_entries")
}

model AiChatMessage {
  id        String   @id @default(uuid()) @db.Uuid
  sessionId String   @map("session_id") @db.Uuid
  role      String   @db.Text
  content   String   @db.Text
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  @@index([sessionId, createdAt], map: "ai_chat_messages_session_idx")
  @@map("ai_chat_messages")
}
